# agent-skill

./: .gitignore  BOOTSTRAP.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  SECURITY_REFACTOR.md  package-lock.json  package.json  registry.json
.github/workflows/: release.yml
scripts/: install.js
skills/find-skills/: SKILL.md
skills/memory/: SKILL.md
src/: cli.rs  editors.rs  main.rs  main.rs.backup  memory.rs  network.rs  security.rs  store.rs
