[package]
name = "skillctl"
version = "0.0.6"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Gestor de Skills para Agentes de IA"
license-file = "LICENSE"

[[bin]]
name = "skillctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"

[profile.release]
opt-level = "z"     # Optimizar para tamaño
lto = true          # Link Time Optimization
codegen-units = 1   # Mejor optimización
strip = true        # Eliminar símbolos de debug
