[package]
name = "skillctl"
version = "0.0.7"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Gestor de Skills para Agentes de IA Minimalista"
license-file = "LICENSE"

[[bin]]
name = "skillctl"
path = "src/main.rs"

[dependencies]
cliclack = "0.3"
console = "0.15"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

[profile.release]
opt-level = "z"     # Optimizar para tamaño
lto = true          # Link Time Optimization
codegen-units = 1   # Mejor optimización
strip = true        # Eliminar símbolos de debug
