[package]
name = "skillctl"
version = "0.0.9"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Gestor de Skills para Agentes de IA Minimalista"
license-file = "LICENSE"

[[bin]]
name = "skillctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
cliclack = "0.3"
console = "0.15"
strum = "0.26"
strum_macros = "0.26"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
url = "2.5"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = "z"     # Optimizar para tamaño
lto = true          # Link Time Optimization
codegen-units = 1   # Mejor optimización
strip = true        # Eliminar símbolos de debug
